# slartibartfast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
site/: _config.yaml  about.md  contact.md  index.md
site/assets/: app.js  custom.css
site/blog/: 2025-10-01-post-about-nothing.md  2025-10-04-very-interesting-philosophy.md  2025-10-23-code-showcase.md  _config.yaml
slartibartfast/: cli.py  config.py  generator.py  server.py
tests/: conftest.py  test_cli.py  test_generator.py
themes/default/: README.md  base.html  home.html  index.html  list.html  page.html
themes/default/assets/: style.css  theme.js
themes/minimal/: base.html  index.html  page.html
